  spoofing your role.

* Added a "dummy" auth type to make authentication on local testing setups
  easier.

* Added preliminary support for running on MacOS and Windows (Cygwin) hosts by
  fixing a number of Mac-specific issues.

* The 'score' display can now be changed on a per-problem basis via
  csq_score_message.

CHANGED:

* The body of the CAT-SOOP default template is now slightly wider.

* Local Python sandboxes now write their stdout and stderr to files instead of
  relying on low-level hacks involving pipes.

* Updated KaTeX to version 0.8.2.

* Updated python-markdown to version 2.6.9.

* The magic variable controlling the checker's location is now
  cs_checker_websocket instead of cs_websocket_location (which is now
  ambiguous).

* Added more options to modify the styling of the "login required" page.

* Cross/check images are now preceded by a newline.

DEPRECATED:

* cs_score_message has been deprecated, in favor of csq_score_message.
  cs_score_message will be removed in a future version.

REMOVED:

* Removed lots of unused imports, unused local variables, etc, courtesy of
  pyflakes.

FIXED:

* Fixed a race condition related to clearing expired session data.

* Fixed serious bug (deadlock) with checker script / logging.

* Modified the way PKiller kills processes to avoid a potential race condition.

* Fixed several breaking issues with the grouping mechanism related to the
  version 10 changes.

* Fixed a bug that prevented WHDW from loading students' scores.

* Fixed a bug that caused some <showhide> tags' buttons to affect other
  showhide elements on the page instead of themselves.

* Fixed an issue with error reporting in the openid_connect auth type.

* Fixed an issue with the 'login' authentication type that caused false
  negatives when checking passwords from different browsers.

* Fixed an issue with broken loading of uploaded files from the database.

* Fixed an issue that caused an error message not to be shown when cs_form was